# sphinx-needs-starter

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  ubproject.toml
.devcontainer/: Dockerfile  devcontainer.json  install-ubc.sh
.github/workflows/: publish-image.yml
source/: conf.py  diagrams.rst  index.rst
